@@ -177,7 +177,7 @@ lastfm_session_new(const char *username, const char *password,
  */
 static gboolean
 lastfm_parse_track(xmlDoc *doc, xmlNode *node, LastfmPls *pls,
-                   const char *pls_title, gboolean custom_pls)
+                   const char *pls_title)
 {
         g_return_val_if_fail(doc!=NULL && node!=NULL && pls!=NULL, FALSE);
 
@@ -187,7 +187,6 @@ lastfm_parse_track(xmlDoc *doc, xmlNode *node, LastfmPls *pls,
         LastfmTrack *track = lastfm_track_new();
         track->pls_title =
                 g_strdup (pls_title ? pls_title : _("(unknown radio)"));
-        track->custom_pls = custom_pls;
 
         while (node != NULL) {
                 name = node->name;
@@ -279,7 +278,6 @@ lastfm_parse_playlist (const char *buffer, size_t bufsize,
         LastfmPls *pls = NULL;
         const xmlChar *name;
         char *pls_title = NULL;
-        gboolean custom_pls = FALSE;
         g_return_val_if_fail(buffer != NULL && bufsize > 0, NULL);
 
         doc = xmlParseMemory(buffer, bufsize);
@@ -306,8 +304,6 @@ lastfm_parse_playlist (const char *buffer, size_t bufsize,
                         xmlFree((xmlChar *)title);
                 } else if (!xmlStrcmp(name, (const xmlChar *) "trackList")) {
                         tracklist = node;
-                } else if (!xmlStrcmp(name, (const xmlChar *) "allflp")) {
-                        custom_pls = TRUE;
                 }
                 node = node->next;
         }
@@ -324,7 +320,7 @@ lastfm_parse_playlist (const char *buffer, size_t bufsize,
         while (node != NULL) {
                 if (!xmlStrcmp(node->name, (const xmlChar *) "track")) {
                         lastfm_parse_track(doc, node->xmlChildrenNode, pls,
-                                           pls_title, custom_pls);
+                                           pls_title);
                 }
                 node = node->next;
         }
